--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pandas_ta==0.3.14b0
 prompt_toolkit==3.0.48
 pymongo==4.10.1
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 pytz==2024.2
 redis==5.2.0
 six==1.16.0
